# fvm

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  fvm.nimble
doc/: 404.html  searchindex-731dd728.js  toc.html
doc/asm/: assembler.html  introduction.html  registers.html
docs/: fvm-asm-design.md  fvm-asm-reference.md  fvm-vm-design.md  fvm-vm-reference.md  index.html  print.html  searcher-c2a407aa.js  toc-3a034a08.js
examples/: arithmetic.fa  dpl_test.fa  fibo.fa  hello_world.fa  interrupts.fa  io.fa  jumps.fa  load_store.fa  loader_info.fa  nop.fa  reg.fa  zext_and_sext.fa
fvm-assembler/: Cargo.toml
fvm-assembler/src/: args.rs  assembler.rs  error.rs  lib.rs  main.rs
fvm-assembler/src/assembler/: diagnostic.rs  emitter.rs  files.rs  lexer.rs  parser.rs  preprocessor.rs  resolver.rs  syntax.rs
fvm-assembler/tests/: directives_tests.rs  error_handling_tests.rs  integration_tests.rs  lexer_tests.rs  parser_tests.rs
fvm-core/: Cargo.toml
fvm-reference/: book.toml
fvm-vm/: Cargo.toml
fvm-vm/src/: cli.rs  error.rs  main.rs  vm.rs
fvm-vm/src/vm/: bus.rs  config.rs  constants.rs  decoder.rs  device.rs  executor.rs  flags.rs  initializer.rs  interrupts.rs  program_patcher.rs  registers.rs
fvm-vm/src/vm/device/: debug.rs  initializer.rs  ram.rs
fvm-vm/src/vm/device/debug/: decimal_io.rs  hex_io.rs  raw_io.rs
fvm-vm/tests/: basic_execution_tests.rs  instruction_tests.rs  loader_tests.rs
scripts/: asm-exec.sh
src/: fvm.nim
tests/: test_assembler.nim  test_bus.nim  test_format.nim  test_lexer.nim  test_parser.nim  test_vm.nim
(+90 files in other folders)
