[package]
name = "fvm-vm"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
fvm-core = { path = "../fvm-core" }
thiserror = { workspace = true }
num_enum = "0.7.5"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
ron = "0.12.0"

[dev-dependencies]
fvm-assembler = { path = "../fvm-assembler" }
